align issue resolved

--- a/src/App.css
+++ b/src/App.css
@@ -17,25 +17,7 @@ font-family: Begumsans-light;
    url("./font/BegumSans-Light.eot") format('eot');
   font-style: normal;
 }
-@media screen and (max-width: 600px) {
-  .col-sm-8 {
-    width: 100%;
-  }
-  .col-sm-4 {
-    width: 100%;
-    background-color: #f2f5f7;
-  }
-}
 
-
-/* .left {
-  width: 75%;
-}
-
-.right {
-  width: 25%;
-  background-color: #f2f5f793;
-} */
 .col-sm-8 {
   width: 60%;
   bottom: 0%;
@@ -70,15 +52,15 @@ font-family: Begumsans-light;
   font-family: 'BegumSans';
   font-size: 26px;
   text-align: right;
-  margin-top: 23px;
-  margin-right: -5px;
+  margin-top: 38px;
+  margin-right: 3px;
 }
 #t3 {
   font-family: 'BegumSans';
   font-size: 26px;
   text-align: right;
   margin-top: -20px;
-  margin-right: -5px;
+  margin-right: 3px;
 }
 #t4 {
   font-family: 'BegumSans';
@@ -86,14 +68,19 @@ font-family: Begumsans-light;
   text-align: right;
   margin-top: -20px;
   padding-bottom: 20px;
-  margin-right: -5px;
+  margin-right: 3px;
 }
 
-.butt{
-  margin-top: 60px;
+/* .butt{
+  margin-top: 50px;
   margin-left: 390px;
+} */
+.butt {
+  margin-top: 45px;
+  margin-left: 385px;
+  font-family:'Begumsans';
+  font-weight: 600;
 }
-
 .button {
   background-color: #f4c264;
   border: none;
@@ -104,21 +91,16 @@ font-family: Begumsans-light;
   display: inline-block;
   margin: 0px 5px ;
   margin-top: -25px;
-  margin-bottom: px;
+  margin-bottom: 0px;
   cursor: pointer;
   border-radius: 28px;
   font-family: 'Begumsans';
   font-weight: 1000;
   font-size: 16px;
   width: 160px;
-  margin-left: 47px;
+  margin-left: 45px;
 }
-.butt{
-  margin-top: 60px;
-  margin-left: 380px;
-  font-family:'Begumsans';
-  font-weight: 600;
-}
+
 .bott_text{
   margin-top: 20px;
   margin-bottom: 30px;
@@ -166,8 +148,8 @@ font-family: Begumsans-light;
   background: (90deg, rgb(255, 255, 255) 0%, rgb(255, 255, 255) 100%);
   font-family: 'BegumSans';
   font-size: 35px;
-  text-align: left;
-  margin-left: 350px;
+  text-align: center;
+  /* margin-left: 350px; */
   margin-top: 30px;
   
 }
@@ -207,4 +189,188 @@ font-family: Begumsans-light;
 a, a:hover, a:focus, a:active {
   text-decoration: none;
   color: inherit;
+}
+
+
+@media screen and (max-width: 400px) {
+  .row {
+    display: inline-block;
+    width: fit-content;
+    text-align: justify center;
+  }
+  .col-sm-8 {
+    width: 60%;
+    bottom: 0%;
+    height: 94vh;
+    overflow-y: auto;
+    overflow-x: hidden;
+    background-color: white;
+  }
+  
+  .col-sm-8 #hr {
+    margin-bottom: 100px;
+    
+  }
+  
+  .col-sm-4 {
+    width: 40%;
+    /* background-color:#f2f5f7; */
+    bottom: 0%;
+    overflow-y: auto;
+    
+  }
+  .container-fluid {
+    padding-left: 0%;
+    /* height: 94vh; */
+    overflow-y: auto; 
+    
+  }
+  /* .row {
+    margin: auto;
+  } */
+  #t2 {
+    font-family: 'BegumSans';
+    font-size: 16px;
+    text-align: center;
+    margin-top: 23px;
+    margin-right: -5px;
+  }
+  #t3 {
+    font-family: 'BegumSans';
+    font-size: 16px;
+    text-align: center;
+    margin-top: -20px;
+    margin-right: -5px;
+  }
+  #t4 {
+    font-family: 'BegumSans';
+    font-size: 16px;
+    text-align: centre;
+    margin-top: -20px;
+    padding-bottom: 20px;
+    margin-right: -5px;
+  }
+  
+  .butt{
+    margin-top: 60px;
+    /* margin-left: 390px; */
+    align-items: center;
+  }
+  
+  .button {
+    background-color: #f4c264;
+    border: none;
+    color: black;
+    padding: 3px 3px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    margin: 0px 5px ;
+    margin-top: -25px;
+    margin-bottom: px;
+    cursor: pointer;
+    border-radius: 28px;
+    font-family: 'Begumsans';
+    font-weight: 1000;
+    font-size: 16px;
+    width: 160px;
+    margin-left: 47px;
+    align-items: center;
+  }
+  .butt{
+    margin-top: 60px;
+    margin-left: 380px;
+    font-family:'Begumsans';
+    font-weight: 600;
+  }
+  .bott_text{
+    margin-top: 20px;
+    margin-bottom: 30px;
+    margin-left: 20px;
+    font-family: 'BegumSans';
+    font-size: 28px;
+    font-style: bolder;
+    font-weight: 600;
+  
+  }
+  
+  .bott_info{
+    font-family: 'BegumSans';
+    font-size: 20px;
+    text-align: left;
+    margin-top: 40px;
+    margin-left: 180px;
+    padding-bottom: 20px;
+  }
+  
+  .pic1{
+    margin-top: -265px;
+    margin-left: 60px;
+  }
+  .pic2{
+    margin-top: -25px;
+    margin-left: 60px;
+  }
+  .pic3{
+    margin-top: -30px;
+    margin-left: 50px;
+  }
+  .btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited {
+    background-color: #f4c264 !important;
+    border: #000;
+    color: #000;
+    font-weight: 500;
+    width: 175px;
+    margin-left: 412px;
+    margin-top: 10px;
+    font-family: 'Begum Sans Regular';
+  }
+  
+  #title {
+
+    background: (90deg, rgb(255, 255, 255) 0%, rgb(255, 255, 255) 100%);
+    font-family: 'BegumSans';
+    font-size: 35px;
+    text-align: center !important;
+    margin-left: 50px !important;
+    margin-top: 30px;
+    
+  }
+  
+  #title1 {
+    background: (90deg, rgb(255, 255, 255) 0%, rgb(255, 255, 255) 100%);
+    font-family: 'BegumSans';
+    font-size: 35px;
+    text-align: center;
+    margin-left: 10px;
+    margin-top: 30px;
+    
+  }
+  
+  
+  
+  #title3 {
+    background: (90deg, rgb(255, 255, 255) 0%, rgb(255, 255, 255) 100%);
+    font-family: 'BegumSans';
+    font-size: 30px;
+    text-align: center;
+    margin-left: 20px;
+    margin-top: 20px;
+    font-weight: bold;
+  }
+  
+  #title4 {
+    background: (90deg, rgb(255, 255, 255) 0%, rgb(255, 255, 255) 100%);
+    font-family: 'BegumSans';
+    font-size: 30px;
+    text-align: center;
+    margin-left: 20px;
+    margin-top: -20px;
+    font-weight: lighter;
+  }
+  
+  a, a:hover, a:focus, a:active {
+    text-decoration: none;
+    color: inherit;
+  }
 }
