--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -119,7 +119,7 @@
     display: none;
   }
   
-  @media screen and (max-width: 960px) {
+  @media screen and (max-width: 400px) {
     .NavbarItems {
       position: relative;
     }
