--- a/src/components/Secondleft.css
+++ b/src/components/Secondleft.css
@@ -11,7 +11,7 @@
     
   }
   .pic5{
-    margin-left: 420px;
+    margin-left: 440px;
     margin-top: -341px;
   }
 
@@ -52,7 +52,7 @@
     font-size: 20px;
     text-align: left;
     margin-top: -50px;
-    margin-left: 500px;
+    margin-left: 510px;
     padding-bottom: 20px;
     color: #808080;
   }
@@ -81,7 +81,7 @@
     font-size: 20px;
     text-align: left;
     margin-top: -230px;
-    margin-left: 500px;
+    margin-left: 510px;
     padding-bottom: 20px;
   }
   #tx4{
